--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     font-family: sans-serif;
 }
 .top-nav-bar {
-    height: 57px;
+    height: 77px;
     top: 0;
     position: sticky;
     background: #fff;
@@ -93,7 +93,7 @@ margin: 5px 10px;
         width: 100%;
     }
  }
- /*------- side menu--------*/
+ /*------- side menu--------
  .side-menu {
 height: 79%;
 width: 15%;
@@ -161,12 +161,12 @@ background-color: #ddd;
     #menu-btn {
         display: block;
     }
- }
+ }   ---*/
 
   /*-----------slider CSS-----------*/
   .slider {
-    width: 85%;
-    margin-left: 15%;
+    width: 100%;
+   /*-- margin-left: 15%; --*/
     padding: 0 10px;
   }
   .slider {
